# tuxai

./: .gitignore  README.md  config.toml  pyproject.toml
notebooks/: 2022_11_21.ipynb  2022_11_29.ipynb  2022_12_05.ipynb  2022_12_13.ipynb  2022_12_21.ipynb  2023_01_26.ipynb  2023_01_nn.ipynb  2023_02_01.ipynb  2023_02_10.ipynb  2023_03_02.ipynb  2023_03_13.ipynb  2023_11_30.ipynb  report.ipynb
tuxai/: dataset.py  features.py  featureselection.py  kerneldoc.py  misc.py  models.py  report.py
tuxai2/: dataset.py  features.py  kerneldoc.py  misc.py  models.py  report.py  transferlearning.py  web.py
tuxai2/html/: index.html  script.js  style.css
