[tool.poetry]
name = "tuxai"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
tensorflow = "^2.11.0"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
pathlib = "^1.0.1"
tqdm = "^4.64.1"
scikit-learn = "^1.1.3"
kmodes = "^0.12.2"
pyarrow = "^10.0.1"
xgboost = "^1.7.1"
feature-engine = "^1.5.2"
tensorflow-gpu = "^2.11.0"
keras-tuner = "^1.1.3"
hyperopt = "^0.2.7"
graphviz = "^0.20.1"
tomli = "^2.0.1"
diskcache = "^5.4.0"
xlsxwriter = "^3.0.3"
cachetools = "^5.2.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
mypy = "^0.991"
jupyterlab = "^3.5.0"
jupyterlab-system-monitor = "^0.8.0"
ipywidgets = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
